
[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "Extract10xCellRangerErrors"
version = "1.0.0"
description = "Extract 10x cellranger errors from multiple runs in to a table."
authors = [
  { name = "Leanne Whitmore", email = "leanne382@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "argparse",
  "bs4",
]

